--- a/login.html
+++ b/login.html
@@ -28,8 +28,8 @@
             <div class="right-div-padding">
                 <h1>Login</h1>
                 <div class="google-facebook">
-                    <button type="button" class="btn btn-light login-btn login-btn1"><img src="assests/icons8-google-48.jpg" style="width:25px ; height:25px; margin-right:10px;">sign up with google</button>
-                    <button type="button " class="btn btn-light login-btn login-btn2"><img src="assests/icons8-facebook-48.jpg" style="width:25px ; height:25px; margin-right:10px;">sign up with facebook</button>
+                    <button type="button" class="btn btn-light login-btn login-btn1"><img src="assests/icons8-google-48.jpg" style="width:25px ; height:25px; margin-right:10px;">Login with google</button>
+                    <button type="button " class="btn btn-light login-btn login-btn2"><img src="assests/icons8-facebook-48.jpg" style="width:25px ; height:25px; margin-right:10px;">Login with facebook</button>
                 </div>
                 <div class="horizontal-line ">
                     <div class="line "></div>
